# crypto-trading-bot

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  strategy_selector.py
.github/workflows/: backtest.yml  ci.yml  security.yml
docs/: BACKTEST_RESULTS.md  HYPEROPT.md  STRATEGIES.md
tests/: conftest.py  test_config.py  test_strategy_selector.py
tests/strategies/: test_bollinger_strategy.py  test_combined_signal_strategy.py  test_ema_strategy.py  test_macd_strategy.py  test_rsi_strategy.py  test_stochastic_rsi_strategy.py  test_supertrend_strategy.py  test_volume_breakout_strategy.py
user_data/: config.json
user_data/strategies/: BollingerBandsStrategy.py  CombinedSignalStrategy.py  EMAStrategy.py  MACDStrategy.py  RSIStrategy.py  StochasticRSIStrategy.py  SuperTrendStrategy.py  VolumeBreakoutStrategy.py
